--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1,19 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="app_name" translatable="false">PARANOIA</string>
-	<string name="defCmdArgs" translatable="false">-console -dev, etc</string>
-	<string name="title_activity_launcher">PARANOIA Launcher</string>
-	<string name="launch_button">Launch PARANOIA!</string>
-	<string name="cmd_args_text">Command line arguments:</string>
-	<string name="cmd_args_text2">Don\'t touch this, if you don\'t know why you need this</string>
-	<string name="not_found_msg">Nothing was found. Check your installation</string>
-	<string name="not_found_title">Something got wrong...</string>
-	<string name="not_implemented_msg">This feature is not implemented yet</string>
-	<string name="not_implemented_title">Not implemented!</string>
-	<string name="not_implemented_fully">This is not ready! Bugreports are not accepted when this feature is on.</string>
-	<string name="xash_not_installed_title">No engine found</string>
-	<string name="xash_not_installed_msg">To continue, you must install Xash3D engine on your device</string>
-	<string name="install_xash">Install</string>
+    <string name="app_name" translatable="false">Xash3D</string>
+	<string name="launcher_name" translatable="false">Xash3D</string>
+	<string name="launcher_name_test" translatable="false">Xash3D (test)</string>
+	<string name="version_string" translatable="false">v0.19</string>
+	<string name="user_label" translatable="false">Xash3D FWGS Common User</string>
+
+    <string name="launch_button">Launch Xash3D!</string>
+    <string name="cmd_args_text">Command line arguments(experts only)</string>
+	<string name="text_res_path">Path to game resources</string>
+	<string name="touch_set">Controls settings</string>
+	<string name="text_shortcut">Xash3D shortcut</string>
+	<string name="text_shortcut_test">Xash3D_test shortcut</string>
+	<string name="shortcut_button_save">Save shortcut</string>
+	<string name="gamedir">Mod directory</string>
+	<string name="pkgname">Mod package name (experts only)</string>
+	<string name="shortcut_name">Shortcut name</string>
+
+    <string name="about_main" translatable="false">Xash3D Android</string>
+    <string name="about_copyright">FWGS is not affiliated with Valve or any of their partners. All copyrights reserved to their respective owners.</string>
+	<!-- Seems Android skips any line breaks and tabs here. -->
+    <string name="about_authors">
+		Port to Android by FWGS team: \n
+		&#8226; a1batross\n
+		&#8226; mittorn \n
+		&#8226; nicknekit.\n
+
+		Special thanks to:\n
+		&#8226; Uncle Mike for Xash3D engine\n
+		&#8226; Valve for Half-Life\n
+	</string>
+	<string name="about_links">
+		Follow us in: \n
+		&#8226; <a href="https://vk.com/xashdroid">VK</a>\n
+		&#8226; <a href="http://moddb.com/game/xash3d-android">ModDB</a>\n
+		&#8226; <a href="https://github.com/FWGS">GitHub</a>
+	</string>
+    <string name="about_button">About</string>
+    <string name="create_shortcut_button">Create mod shortcut</string>
+    <string name="select_folder">Select game data location</string>
+    
+    <string name="text_tab1">Normal</string>
+    <string name="text_tab2">Advanced</string>
+    <string name="text_res_tittle2">Normal settings</string>
+    <string name="text_res_tittle3">Advanced settings</string>
+    <string name="volume">Volume buttons mode</string>
+    <string name="use_volume">Default action</string>
+    <string name="no_volume">Use in game</string>
+    <string name="folder">Set current folder</string>
+	
+	<string name="update_button">Check updates on start</string>
+	<string name="update_to_beta">Update to unstable version if available</string>
+	<string name="update_message">%s is available! Download it now!</string>
+	<string name="update">Update</string>
 	<string name="cancel">Cancel</string>
-	<string name="ok">OK!</string>
+	<string name="ok">Ok</string>
+	<string name="no_updates">No updates was found</string>
+	<string name="checking_updates">Working...</string>
+	<string name="immersive_mode">Enable Immersive Mode(fullscreen, KitKat or higher)</string>
+	
+
+	<string name="write_failed">Write test has failed</string>
+	
+	<string name="ask_about_new_basedir_msg">Move your game files somewhere else, for example Android/data/in.celest.xash3d.hl or internal memory. At next run I will ask you about folder again.</string>
+	<!--<string name="lollipop_request_permission_msg">Due to writing politics of newer Android versions, you need to select a root folder of storage where game data is located.</string>
+	<string name="lollipop_select_folder_btn">Select folder</string>-->
+	
+	<!-- These strings must be concat with a "ask_about_new_basedir" string -->
+	<string name="lollipop_request_permission_fail_msg">Write test has been failed twice. </string>
+	<string name="lollipop_write_fail_msg">Due to writing politics of newer Android versions, you can\'t use this storage. </string>
+	<string name="kitkat_write_fail_msg">Due to writing politics of Android 4.4, you can\'t use this storage. </string>
+	<string name="readonly_fs_fail_msg">Seems you have read-only filesystem. </string>
 </resources>
