--- a/android/res/values/strings.xml
+++ b/android/res/values/strings.xml
@@ -1,44 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name" translatable="false">Xash3D</string>
-	<string name="launcher_name" translatable="false">Xash3D</string>
-	<string name="launcher_name_test" translatable="false">Xash3D (test)</string>
-	<string name="version_string" translatable="false">v0.19</string>
-	<string name="user_label" translatable="false">Xash3D FWGS Common User</string>
+    <string name="app_name" translatable="false">PARANOIA: Android</string>
+	<string name="version_string" translatable="false">v1.2.3</string>
 
-    <string name="launch_button">Launch Xash3D!</string>
+    <string name="launch_button">Launch PARANOIA!</string>
     <string name="cmd_args_text">Command line arguments(experts only)</string>
-	<string name="text_res_path">Path to game resources</string>
-	<string name="touch_set">Controls settings</string>
-	<string name="text_shortcut">Xash3D shortcut</string>
-	<string name="text_shortcut_test">Xash3D_test shortcut</string>
-	<string name="shortcut_button_save">Save shortcut</string>
-	<string name="gamedir">Mod directory</string>
-	<string name="pkgname">Mod package name (experts only)</string>
-	<string name="shortcut_name">Shortcut name</string>
 
-    <string name="about_main" translatable="false">Xash3D Android</string>
     <string name="about_copyright">FWGS is not affiliated with Valve or any of their partners. All copyrights reserved to their respective owners.</string>
 	<!-- Seems Android skips any line breaks and tabs here. -->
     <string name="about_authors">
-		Port to Android by FWGS team: \n
-		&#8226; a1batross\n
-		&#8226; mittorn \n
-		&#8226; nicknekit.\n
-
-		Special thanks to:\n
-		&#8226; Uncle Mike for Xash3D engine\n
-		&#8226; Valve for Half-Life\n
 	</string>
 	<string name="about_links">
-		Follow us in: \n
-		&#8226; <a href="https://vk.com/xashdroid">VK</a>\n
-		&#8226; <a href="http://moddb.com/game/xash3d-android">ModDB</a>\n
-		&#8226; <a href="https://github.com/FWGS">GitHub</a>
+		&#8226; <a href="http://paranoia.level-design.ru">PARANOIA Website</a>\n
+		&#8226; <a href="https://xash.su">Flying With Gauss</a>
 	</string>
     <string name="about_button">About</string>
-    <string name="create_shortcut_button">Create mod shortcut</string>
-    <string name="select_folder">Select game data location</string>
     
     <string name="text_tab1">Normal</string>
     <string name="text_tab2">Advanced</string>
@@ -47,7 +23,6 @@
     <string name="volume">Volume buttons mode</string>
     <string name="use_volume">Default action</string>
     <string name="no_volume">Use in game</string>
-    <string name="folder">Set current folder</string>
 	
 	<string name="update_button">Check updates on start</string>
 	<string name="update_to_beta">Update to unstable version if available</string>
